--- a/_talks/2022-07-06-talk-14.md
+++ b/_talks/2022-07-06-talk-14.md
@@ -3,9 +3,9 @@ title: "ECSR Annual Conference 2022, European Consortium for Sociological Resear
 collection: talks
 type: "Presentation, University of Amsterdam"
 permalink: /talks/2018-10-01-talk-3
-venue: "<i>Differences in Gender Pension Gaps in public and private pensions in West Germany: Which role do work-family life courses play?<i>"
+venue: "Differences in Gender Pension Gaps in public and private pensions in West Germany: Which role do work-family life courses play?"
 date: 2022-07-06
-location: 
+location: "Amsterdam"
 ---
 
 
