--- a/_talks/2023-10-09-talk-21.md
+++ b/_talks/2023-10-09-talk-21.md
@@ -5,7 +5,8 @@ type: "Presentations"
 permalink: /talks/talk-21
 venue: "Full-time employment is all that matters? Decomposing Gender Pension Gaps based on relevant life course features in Germany & the Netherlands"
 date: 2023-10-09
-location: "Munic, Germanz"
+location: "Munic, Germany" 
 ---
+
 
 
