--- a/_talks/2023-11-09-talk-22.md
+++ b/_talks/2023-11-09-talk-22.md
@@ -1,11 +1,12 @@
 ---
-title: "2023 SLLS Annual Conference Life Courses in Times of Uncertainty"
+title: "LIVES International Conference 9-10 November 2023 in Lausanne"
 collection: talks
 type: "Presentations"
-permalink: /talks/talk-21
+permalink: /talks/talk-22
 venue: "Full-time employment is all that matters? Decomposing Gender Pension Gaps based on relevant life course features in Germany & the Netherlands"
-date: 2023-10-09
-location: "Munic, Germanz"
+date: 2023-11-09
+location: "Lausanne, Switzerland" 
 ---
+
 
 
