--- a/_talks/2023-09-18-talk-20.md
+++ b/_talks/2023-09-18-talk-20.md
@@ -1,7 +1,7 @@
 ---
 title: "ECSR Annual Conference 2023"
 collection: talks
-type: "Presentations"
+type: "Presentation"
 permalink: /talks/talk-20
 venue: "Full-time employment is all that matters? Decomposing Gender Pension Gaps based on relevant life course features in Germany & the Netherlands"
 date: 2023-09-18
