--- a/_talks/2023-11-09-talk-22.md
+++ b/_talks/2023-11-09-talk-22.md
@@ -1,7 +1,7 @@
 ---
 title: "LIVES International Conference 9-10 November 2023 in Lausanne"
 collection: talks
-type: "Presentations"
+type: "Presentation"
 permalink: /talks/talk-22
 venue: "Full-time employment is all that matters? Decomposing Gender Pension Gaps based on relevant life course features in Germany & the Netherlands"
 date: 2023-11-09
