--- a/_talks/2024-04-24-talk-24-1.md
+++ b/_talks/2024-04-24-talk-24-1.md
@@ -1,7 +1,7 @@
 ---
 title: "PAA"
 collection: talks
-type: "Presentations"
+type: "Presentation"
 permalink: /talks/talk-24-2
 venue: "Decomposing the Gender Wealth Gap in late working age based on the most relevant family and work life course aspects"
 date: 2024-04-19
