--- a/_talks/2024-04-24-talk-24-2.md
+++ b/_talks/2024-04-24-talk-24-2.md
@@ -1,7 +1,7 @@
 ---
 title: "MZES Social Science Data Lab - Methods Bites"
 collection: talks
-type: "Presentations"
+type: "Invited presentation"
 permalink: /talks/talk-23
 venue: "Towards more life-course-sensitive decompositions of group-inequalities: Two approaches applied to the Gender Pension Gap"
 date: 2024-04-24
