--- a/_talks/2023-10-09-talk-21.md
+++ b/_talks/2023-10-09-talk-21.md
@@ -1,7 +1,7 @@
 ---
 title: "2023 SLLS Annual Conference Life Courses in Times of Uncertainty"
 collection: talks
-type: "Presentations"
+type: "Presentation"
 permalink: /talks/talk-21
 venue: "Full-time employment is all that matters? Decomposing Gender Pension Gaps based on relevant life course features in Germany & the Netherlands"
 date: 2023-10-09
