--- a/_talks/2024-04-24-talk-24-1.md
+++ b/_talks/2024-04-24-talk-24-1.md
@@ -1,11 +1,11 @@
 ---
-title: "PAA"
+title: "SHARE International Seminar Series"
 collection: talks
 type: "Presentation"
 permalink: /talks/talk-24-2
-venue: "Decomposing the Gender Wealth Gap in late working age based on the most relevant family and work life course aspects"
-date: 2024-04-19
-location: "Columbus, USA" 
+venue: "Life-Course-Sensitive Analysis of Group Inequalities: Combining Sequence Analysis with the Kitagawa–Oaxaca–Blinder Decomposition"
+date: 2024-03-13
+location: "Online" 
 ---
 
 
