--- a/_talks/2024-04-24-talk-24-2.md
+++ b/_talks/2024-04-24-talk-24-2.md
@@ -1,12 +1,9 @@
 ---
-title: "MZES Social Science Data Lab - Methods Bites"
+title: "PAA"
 collection: talks
-type: "Invited presentation"
-permalink: /talks/talk-23
-venue: "Towards more life-course-sensitive decompositions of group-inequalities: Two approaches applied to the Gender Pension Gap"
-date: 2024-04-24
-location: "Mannheim, Germany | online" 
+type: "Presentation"
+permalink: /talks/talk-24-2
+venue: "Decomposing the Gender Wealth Gap in late working age based on the most relevant family and work life course aspects"
+date: 2024-04-19
+location: "Columbus, USA" 
 ---
-
-More details: https://www.mzes.uni-mannheim.de/socialsciencedatalab/page/events/
-
