--- a/_talks/2024-04-24-talk-24-3.md
+++ b/_talks/2024-04-24-talk-24-3.md
@@ -8,5 +8,7 @@ date: 2024-04-24
 location: "Mannheim, Germany | online" 
 ---
 
+Video recording of the talk: https://www.youtube.com/watch?v=tQ9MEWkMWvs
+
 More details: https://www.mzes.uni-mannheim.de/socialsciencedatalab/page/events/
 
